fix(List): cell title actions makes the title invisible #2557

--- a/packages/components/src/VirtualizedList/CellTitle/CellTitle.scss
+++ b/packages/components/src/VirtualizedList/CellTitle/CellTitle.scss
@@ -89,6 +89,7 @@ $tc-list-title-icon-size: $svg-rg-size !default;
 	&:global(.ally-focus-within) {
 		:global(.tc-list-title .cell-title-actions) {
 			opacity: 1;
+			width: 100%;
 			transition: opacity 0.15s ease-in;
 			visibility: visible;
 		}
