--- a/packages/components/src/VirtualizedList/CellTitle/CellTitleActions.scss
+++ b/packages/components/src/VirtualizedList/CellTitle/CellTitleActions.scss
@@ -17,6 +17,7 @@ $tc-list-title-dropup-menu-triangle: '\25bc';
 		background: linear-gradient(to right, rgba(255, 255, 255, 0), $tc-list-row-hover-bg $padding-large);
 		opacity: 0;
 		visibility: hidden;
+		width: 0;
 
 		&:not(:last-child):after {
 			content: '|';
